@@ -1,19 +1,21 @@
 package com.project.backend.security;
 
 import java.io.IOException;
-import java.util.Arrays;
 import java.util.List;
+
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
-import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 import org.springframework.web.filter.OncePerRequestFilter;
 
+import com.google.cloud.firestore.DocumentSnapshot;
 import com.project.backend.exceptionhandler.ExceptionLog;
+import com.project.backend.repository.FirestoreRepository;
 
 import io.jsonwebtoken.Claims;
 import jakarta.servlet.FilterChain;
@@ -21,68 +23,68 @@ import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 
+/**
+ * A Spring Security filter that handles JWT-based authentication for incoming
+ * requests.
+ * 
+ * This filter is responsible for:
+ * - Checking if the request URI is in the ignored path list (e.g. "/login")
+ * - Extracting the JWT token from the "Authorization" header
+ * - Decoding and validating the JWT token
+ * - Retrieving the user details from Firestore based on the token
+ * - Setting the authenticated user context in the Spring Security context
+ * 
+ * If the token is missing, invalid, or the user details cannot be retrieved,
+ * the filter will
+ * send a 401 Unauthorized response.
+ */
 @Service
 public class JwtAuthenticationFilter extends OncePerRequestFilter {
-    // Autowired instance of ExceptionLog for logging exceptions
+    @Autowired
+    private FirestoreRepository repository;
     @Autowired
     private ExceptionLog exceptionLog;
-    // Autowired instance of JwtUtils for JWT operations
     @Autowired
     private JwtUtils jwtUtils;
-    // Autowired instance of AuthenticationManager for authentication
-    @Autowired
-    private AuthenticationManager manager;
-    // List of request URIs to exclude from JWT authentication
-    private static final List<String> excludedPath = Arrays.asList("/", "/login", "/signup");
-    // List of request URIs required JWT authentication
-    private static final List<String> authenticatedPath= Arrays.asList("/logout");
-    // Override the doFilterInternal method to apply JWT authentication logic
+    private final List<String> igoredPath = List.of("/login");
+
     @Override
     protected void doFilterInternal(HttpServletRequest request, HttpServletResponse response, FilterChain filterChain)
             throws ServletException, IOException {
-        // Skip JWT authentication for specified URIs
-        if (excludedPath.contains(request.getRequestURI()) || true/*for testing only, remove on production */) {
-            filterChain.doFilter(request, response);
+        if (igoredPath.contains(request.getRequestURI()) || true ) {
+            doFilter(request, response, filterChain);
             return;
         }
-        // Extract the JWT token from the request header
         String token = request.getHeader(HttpHeaders.AUTHORIZATION);
         if (token == null || !token.startsWith("Bearer ")) {
             exceptionLog.log(new IOException(this.getClass().getName()));
             response.sendError(HttpStatus.UNAUTHORIZED.value());
             return;
         }
-        // Decode the JWT token and validate it
         token = token.split(" ")[1].trim();
         Claims claims = jwtUtils.decodeToken(token);
-        if (jwtUtils.isValid(claims)) {
-            // Perform authentication based on the JWT claims
-            String email = jwtUtils.getEmail(claims);
-            String password = jwtUtils.getPassword(claims);
-            Authentication jwtAuthentication = manager
-                    .authenticate(new UsernamePasswordAuthenticationToken(email, password));
-            if (!jwtAuthentication.isAuthenticated()) {
-                exceptionLog.log(new IOException(this.getClass().getName()));
-                response.sendError(HttpStatus.UNAUTHORIZED.value());
-                return;
-            }
-            SecurityContextHolder.getContext()
-                                 .setAuthentication(jwtAuthentication);
-            if (authenticatedPath.contains(request.getRequestURI()) ||
-                jwtAuthentication.getAuthorities()
-                                 .stream()
-                                 .map(auth -> auth.getAuthority())
-                                 .anyMatch(name -> name.toLowerCase()
-                                                       .equals(request.getRequestURI()
-                                                       .split("/")[1]))) {
-                filterChain.doFilter(request, response);
-                return;
-            } else {
-                exceptionLog.log(new IOException(this.getClass().getName()));
-                response.sendError(HttpStatus.UNAUTHORIZED.value());
-            }
+        if (!jwtUtils.isValid(claims)) {
+            exceptionLog.log(new IOException(this.getClass().getName()));
+            response.sendError(HttpStatus.UNAUTHORIZED.value());
+            return;
+        }
+        String id = jwtUtils.getId(claims);
+        String role = jwtUtils.getRole(claims);
+        String password = jwtUtils.getPassword(claims);
+        DocumentSnapshot snapshot = repository.getDocumentById(AuthenticationDetails.class, id);
+        if (snapshot == null) {
+            exceptionLog.log(new IOException(this.getClass().getName()));
+            response.sendError(HttpStatus.UNAUTHORIZED.value());
+            return;
+        }
+        String userPassword = snapshot.get("password", String.class);
+        if (BackendSecurityConfiguration.encoder.matches(password, userPassword)) {
+            Authentication authentication = UsernamePasswordAuthenticationToken.authenticated(id,
+                    userPassword,
+                    List.of(new SimpleGrantedAuthority(role)));
+            SecurityContextHolder.getContext().setAuthentication(authentication);
+            doFilter(request, response, filterChain);
         } else {
-            // Log and reject the request if the JWT is invalid
             exceptionLog.log(new IOException(this.getClass().getName()));
             response.sendError(HttpStatus.UNAUTHORIZED.value());
         }
